fixed z-index issue wiwith mobile nav

--- a/stylesheets/_about.scss
+++ b/stylesheets/_about.scss
@@ -5,7 +5,6 @@
 #about{ //page container
 	position: relative; //so absolutely-positioned children will reference this as context
 	width: 100%;
-	height: 55rem;
 	margin-bottom: 0;
 	overflow: hidden;
 }
@@ -62,6 +61,9 @@
 }
 
 
+
+
+
 @media screen and (orientation: portrait){
 	.overlay{
 		background: url('../images/detail/windowTall.svg') 0 0 / 100% no-repeat;
@@ -69,10 +71,6 @@
 }
 
 @media screen and (max-width: 768px) and (min-width: 600px){
-	#about{
-		height: 48rem;
-	}
-
 	#about .titleWrap{
 		padding-top: 20rem;
 	}
@@ -91,7 +89,6 @@
 	}
 
 	#about{
-		height: 30rem;
 		background-color: black;
 	}
 	#about .fixed {
@@ -111,7 +108,6 @@
 
 @media screen and (max-width: 600px) and (orientation: portrait){
 	#about{
-		height: 40rem;
 		background-color: black;
 	}
 
@@ -137,4 +133,23 @@
 		z-index: 10;
 		position: relative;
 	}
+}
+
+#about{
+	height: 55rem;
+	
+	// @media screen and (max-width: 1024px) and (min-width: 768px) and (orientation: landscape){
+	// 	height: 55rem;
+	// }
+	// @media screen and (max-width: 768px) and (min-width: 500px) and (orientation: portrait){
+	// 	height: 55rem;
+	// }
+	@media screen and (max-width: 480px) and (min-width: 320px) and (orientation: landscape){
+		height: 30rem;
+	}
+	@media screen and (max-width: 320px) and (orientation: portrait){
+		height: 40rem;
+
+	}
+
 }
