--- a/stylesheets/_nav.scss
+++ b/stylesheets/_nav.scss
@@ -20,7 +20,6 @@ nav{
 } 
 
 #mobileNav {
-	z-index: 10;
 	position: static;
 	height: 35rem;
 	padding-top: 3rem; //to off-set width taken up by fixed-top-nav when hamburger is clicked
@@ -32,7 +31,7 @@ nav{
 	 }
 
 	 a{
-
+	 	z-index: 50;
 	 }
 
 }
@@ -83,6 +82,12 @@ nav{
 
 	#mobileNav, #hamburger {
 		display: block;
+	}
+}
+
+@media screen and (max-width: 768px) and (min-width: 480px) and (orientation: portrait){
+	#mobileNav{
+		padding-bottom: 50rem;
 	}
 }
 
