--- a/stylesheets/_projects.scss
+++ b/stylesheets/_projects.scss
@@ -90,12 +90,18 @@
 
 
 //tab portrait and smaller
-@media screen and (max-width: 768px) and (orientation: portrait){
+@media screen and (max-width: 768px) and (min-width: 480px) and (orientation: portrait){
 	#projects{
+		height: 50rem;
+
 		#projectDetails{
 			width: 100%;
 		}
+	}
+}
 
+@media screen and (max-width: 480px) and (orientation: portrait){
+	#projects{
 		.smallColumn, .largeColumn{
 			float: none;
 			width: 100%;
@@ -129,9 +135,14 @@
 		margin: 0 auto;
 	}
 
+	//tab landscape
+	@media screen and (max-width: 1024px) and (min-width: 768px) and (orientation: landscape){
+		height: 130rem;
+	 }
+
 	//tab portrait
-	@media screen and (max-width: 768px) and (min-width: 480px){
-		height: 190rem;
+	@media screen and (max-width: 768px) and (min-width: 480px) and (orientation: portrait){
+		height: 130rem;
 	 }
 
 	 @media screen and (max-width: 768px) and (orientation: landscape){
